Fix extremly important issue regarding alignement

--- a/dashboard/main.css
+++ b/dashboard/main.css
@@ -265,7 +265,8 @@ input[type="submit"]:disabled:hover {
 }
 
 .switch {
-    margin-top: 10px;
+    margin-top: 8px;
+    margin-bottom: 8px;
 }
 
 label {
